CHANGES
=======

* 0.4.1
* removed unused \_\_version\_\_
* Fix wrong template call
* Update Readme.md - fix link to Pelican Themes (#666)
* Preparing for Dynaconf 1.0.0 (#661)
* Dynaconf upgraded to 0.7.0
* Fix #629 user and author profile management
* Added full name to user
* Fix #631 added view|preview links to admin column views (#658)
* Fix #639 preview requires login
* fix #654 added logout button to admin navbar
* Get favicon filename from theme\_context (#656)
* Added user creation and edit to admin (#652)
* In runserver command SITEURL is dynamically set
* Changed the port parameter to int. (#651)
* Updated url for the project in contributing.md (#649)
* Small whitespace fix
* Added some screenshots and fixed navbar
* Added basic test to pass travis CI
* Travis misses pandoc
* Fix Flask version and added travis and pyup conf
* Pinned deps

0.4.0
-----

* Using absolute url for logo-emoji

0.3.5
-----

* Removed flit in favor of pbr
* Fix dropdown arrow
* Clenup on README
* Support for bare urls in MENU block items
* Split root categories fix #24
* Implemented sitemap Fix #19
* Implemented atom and rss feeds fix #18
* Implemented atom and rss feeds fix #18
* Author page can have comments box
* Fix #17 author profile page added creating a Block with the same name/slug turns to author profile page customizable header, text, social links, image and banner background
* removed unused code form utils.routing
* Refactored url\_for\_content
* modularized custom\_vars
* better home blocks based on models
* Custom vars and WIP to get HOME items in admin
* Adding Collection Type and dynamic MENUITEMS fix #7 fix #12 fix #16 fix #10 fix #9  (#82)
* bind to 127..
* Updated README :hamster:
* Update CONTRIBUTING.md file (#81)
* Add Dockerfile (#79)
* adding a \_\_main\_\_ to allow \`python -m quokka <command>\` on windows (#76)
* More spacing after leading emoji (#75)
* Update .gitattributes
* Create .gitattributes
* Turn todo into issues
* more todo :hamster: