@@ -5,3 +5,6 @@ Bruno Rocha <rochacbruno@users.noreply.github.com>
 Eric Ho <dho.eric@gmail.com>
 Filipe Amaral <filipe@britecore.com>
 Lex Quarkie <lex.quarkie@gmail.com>
+Micheal Waltz <ecliptik@gmail.com>
+Red Hat Developers Launcher <45641108+redhat-developers-launcher@users.noreply.github.com>
+marcosptf <marcosptf@yahoo.com.br>
