@@ -1,7 +1,7 @@
-.PHONY: docs test pep8 clean install build publish tree create_env devserver pandoc adduser
+.PHONY: docs test pep8 clean install build publish tree createvenv devserver pandoc adduser develop
 
 test: pep8
-	QUOKKA_MODE=test py.test --cov=quokka -l --tb=short --maxfail=1 tests/
+	QUOKKA_MODE=test pytest --cov=quokka -l --tb=short --maxfail=1 tests/
 
 pep8:
 	@flake8 quokka --ignore=F403 --exclude=migrations
@@ -21,17 +21,24 @@ clean:
 	@rm -rf *.egg-info
 
 
+develop:
+	@. .venv/bin/activate
+	@pip install --upgrade pip
+	@pip install -r requirements.txt
+	@pip install -r requirements-dev.txt
+	@pip freeze
+
 reqs:
 	@pip install pbr pypandoc pygments
 
 pandoc: reqs
 	@pandoc --from=markdown --to=rst --output=README.rst README.md
 
-install: clean pandoc
-	@python setup.py develop
+install:
+	@python3.6 setup.py develop
 
-build: clean pandoc
-	@python setup.py sdist bdist_wheel --universal
+build:
+	@python3.6 setup.py sdist bdist_wheel --universal
 
 publish: build
 	@twine upload dist/*
@@ -39,9 +46,11 @@ publish: build
 tree:
 	@tree  -L 1 -a -I __pycache__ --dirsfirst --noreport
 
-create_env:
-	@rm -rf venv
-	@python3.6 -m venv venv
+createvenv:
+	@rm -rf .venv
+	@python3.6 -m venv .venv
+	@. .venv/bin/activate
+	@ls -lparth
 
 devserver:
 	$(info "Running quokka project template...")
