@@ -1,6 +1,14 @@
 CHANGES
 =======
 
+* Initial commit
+* Update README.md
+* Update setup.cfg
+* Update README.md
+* Re-factor Dockerfile to use multi-stage builds, fixes #606
+* debugger docker file (#669)
+* removing flit from dockerfile (#668)
+* added --pre release to readme
 * 0.4.1
 * removed unused \_\_version\_\_
 * Fix wrong template call
